Fix links on mobile.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -211,11 +211,19 @@ textarea {
         margin-bottom: 10px;
 
         .builder-links {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
             text-transform: uppercase;
             font-weight: bold;
+            margin-bottom: 10px;
+
+            @media @desktop-up {
+                display:flex;
+                justify-content: space-between;
+            }
+
+            @media @desktop-down {
+                display: grid;
+                grid-template-columns: 33% 33% 33%; 
+            }
 
             .selected {
                 color: @secondary;
